changes to scrambled eggs
Added CSS to breakfast files: Scrambled eggs

--- a/index.html
+++ b/index.html
@@ -4,15 +4,17 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Odin Project 1: Recipes</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Recipes</h1>
-  <ul>
-    <li><a href="recipes/waffles.html">Waffles Recipe</a>
-    </li>
+  <h1>RecipeCentral</h1>
+  <p>Welcome to Recipe central, where you can find the coolest and most cost effective recipes to date.</p>
+  <div breakfast-div>
+    <a href="breakfast/waffles.html">Waffles Recipe</a>
+    <a href=""
+  </div>
     <li> <a href="chicken/chickensand.html">Copycat McChicken Sandwich</a></li>
-    <li><a href="alfredo/alfredo.html">Shrimp Linguine Alfredo</a></li>
-  </ul>
+  <a href="alfredo/alfredo.html">Shrimp Linguine Alfredo</a></li>
   
 </body>
 </html>
