Updated CSS to waffles and scrambled eggs files

--- a/index.html
+++ b/index.html
@@ -9,12 +9,20 @@
 <body>
   <h1>RecipeCentral</h1>
   <p>Welcome to Recipe central, where you can find the coolest and most cost effective recipes to date.</p>
-  <div breakfast-div>
+  <section breakfast-section>
     <a href="breakfast/waffles.html">Waffles Recipe</a>
-    <a href=""
-  </div>
-    <li> <a href="chicken/chickensand.html">Copycat McChicken Sandwich</a></li>
-  <a href="alfredo/alfredo.html">Shrimp Linguine Alfredo</a></li>
-  
+    <a href="breakfast/quiche.html">Quiche Recipe</a>
+    <a href="breakfast/scrambledeggs.html">Scrambled Eggs</a>
+  </section>
+  <section class="lunch-section">
+    <a href="lunch/chicken-sandwich.html">Copycat McChicken Sandwich</a>
+    <a href="lunch/spaghetti.html">Spaghetti</a>
+    <a href="lunch/tacos.html">Tacos</a>
+  </section>
+  <section class="dinner-section">
+    <a href="dinner/alfredo.html">Shrimp Linguine Dinner</a>
+    <a href="dinner/carbonara.html">Carbonara Dinner</a>
+    <a href="dinner/steak.html">Steak Dinner</a>
+  </section>
 </body>
 </html>
