--- a/breakfast/waffles.html
+++ b/breakfast/waffles.html
@@ -3,52 +3,67 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="../style.css">
   <title>Waffles Recipe</title>
 </head>
 <body>
-  <img src="/images/Waffles.JPG" alt="Picture of a belgium style waffles">
-  <h2>Waffles</h2>
-  <p>This waffles recipe is the only one you need ot make home made waffles with your waffle iron. Simple pantry ingredients mix up quickly in this easy batter than can be used right away or stored in the refrigerator for up to a week. Serves waffles hot with whipped cream and fresh fruit or with butter ans maple syrup for either breakfast, lunch, or a snack. <a href="https://www.allrecipes.com/recipe/22180/waffles-i/">Here is the website Recipe</a></p>
+  <img src="../images/waffles.jpg" alt="Picture of a plate fluffy waffles" class="waffles-picture">
+  <section class="section-header"> <!----This is where the section header for the waffles-->
+    <h2>Waffles</h2>
+  </section>
+  <div class="review-section ">
+    <span class="review-star1">⭐</span>
+    <span class="review-star2">⭐</span>
+    <span class="review-star3">⭐</span>
+    <span class="review-star4">⭐</span>
+    <span class="waffle-rating">4.5
+    (5,367)</span> 
+    <span class="waffle-count">4,103 Reviews
+    </span> 
+    <span class="waffle-photos">703 Photos</span>
+  </div>
+  <section class="waffle-description"> <!-----Waffles blurb-->
+    <p>This waffles recipe is the only one you need ot make home made waffles with your waffle iron. Simple pantry ingredients mix up quickly in this easy batter than can be used right away or stored in the refrigerator for up to a week. Serves waffles hot with whipped cream and fresh fruit or with butter ans maple syrup for either breakfast, lunch, or a snack.</p>
+  </section>
+  <section class="waffle-ingredients"> <!--Ingredients section-->
+    <h3 class="waffle-ingredients-header"> Ingredient overview</h3>
+    <p class="waffle-ingredients-blurb">You likely have all of the ingredients you'll need for this waffle recipe. If not, visit your local market. </p>
+    <ul class="waffle-ingredients-list">
+      <li>2 Large eggs</li>
+      <li>2 cups of flour</li>
+      <li>1 3/4 cups of milk</li>
+      <li>1 table spoon white sugar</li>
+      <li>4 tablespoons baking powder</li>
+      <li>1/4 tablespoon salt</li>
+      <li>1/2 tablespoon sugar</li>
+      <li>Nonstick cooking spray</li>
+    </ul>
+  </section>
+  <section class="directions-section"> <!----Directions area-->
+    <h2 class="direction-header">How to Make Waffles</h2>
+    <p class="directions-blurb">You'll find the full, step-by-step recipe below. But there is a brief overview of what you can expect when you make the best waffles of your life.</p>
+    <p class="waffle-directions">
+      <strong>Step 1: </strong> Preheat a waffle iron according to manufacturer's instructions.
+      <br>
+      <strong>Step 2: </strong> Whisk eggs in a large bowl until light and fluffy. Add flour, milk, and vegetable oil and mix to combine. Whisk in sugar, then mix in baking powder, salt, and vanilla just until smooth, being careful not to overmix.
+      <br>
+      <strong>Step 3: </strong> Spray the preheated waffle iron with nonstick spray. Pour batter onto the hot waffle iron and cook until golden brown and the iron stops steaming, 3 to 5 minutes.
+    </p>
+  </section>
+  <section class="topping-section"> <!---Topping ideas.-->
+    <h2 class="topings-header">Waffles topping</h2>
+    <p class="topings-blurb">For the most traditional experience, top each waffle with butter and maple syrup. But thats not the only way to enjoy this recipe! Try one of the following for a waffle experience.</p>
+    <ul class="topping-list">
+      <li class="topping"> Blueberry sauce</li>
+      <li class="topping">Nuts (such as pecans)</li>
+      <li class="topping">Vanilla glaze</li>
+      <li class="topping">Nutella</li>
+      <li class="topping">Home made whipped cream</li>
+      <li class="topping">Fresh berries</li>
+  </ul>
 
-  <h3> Ingredient overview</h3>
-  <caption>You likely have all of the ingredients you'll need for this waffle recipe. If not, visit your local market. </caption>
-  <ul>
-    <li><strong>Eggs:</strong> This waffle recipe starts with two whole eggs. </li>
-    <li><strong>Flour:</strong> All purpose flour adds gluten, which gives the waffles structure</li>
-    <li><strong>Milk:</strong> Whole milk lends richness and moisture. Plus it helps create the ideal batter consistency</li>
-    <li><strong>Oil:</strong> Adding a neutral oil, such as vegetable, ensues the waffles are nice and moist.</li>
-    <li><strong>Sugar:</strong> A tablespoon of white sugar adds the perfect amount of sweetness.</li>
-    <li><strong>Baking Powder:</strong> Baking powder adds as a leavener, which means it contributes to the waffles light and fluffy texture. </li>
-    <li><strong>Salt:</strong> A pinch of salt enhances the other flavors, <em>dont skip this step!</em></li>
-    <li><strong>Vanilla:</strong> A dash of vanilla adds complexity and enhances the overall flavor</li>
-    <li><strong>Cooking spray:</strong> You'll need to spray the iron with nonstick cooking spray before you start making the waffles. </li>
-  </ul>
-  <ul>
-  <li>2 Large eggs</li>
-  <li>2 cups of flour</li>
-  <li>1 3/4 cups of milk</li>
-  <li>1 table spoon white sugar</li>
-  <li>4 tablespoons baking powder</li>
-  <li>1/4 tablespoon salt</li>
-  <li>1/2 tablespoon sugar</li>
-  <li>nonstick cooking spray</li>
-  </ul>
-  <h2>How to Make Waffles</h2>
-  <p>You'll find the full, step-by-step recipe below. But there is a brief overview of what you can expect when you make the best waffles of your life.</p>
-  <ol>
-    <li><strong>Make the batter: </strong>Whisk the eggs, then add the flour, milk and oil. Whisk in the sugar. Stir in the remaining ingredients. </li>
-    <li><strong>Make the waffles: </strong>Pour the batter on to the hot, prepared waffle iron. Cook until golden brown and repeat with the remaining batter.</li>
-  </ol>
-  <h2>Waffles topping</h2>
-  <p>For the most traditional experience, top each waffle with butter and maple syrup. But thats not the only way to enjoy this recipe! Try one of the following for a waffle experience.</p>
-  <ul>
-  <li> Blueberry sauce</li>
-  <li>Nuts (such as pecans)</li>
-  <li>Vanilla glaze</li>
-  <li>Nutella</li>
-  <li>Home made whipped cream</li>
-  <li>Fresh berries</li>
-  </ul>
+
+  </section>
+  
 </body>
 </html>
