--- a/breakfast/waffles.html
+++ b/breakfast/waffles.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-  <link rel="stylesheet" href="../style.css">
+  <link rel="stylesheet" href="breakfast.css">
   <title>Waffles Recipe</title>
 </head>
 <body>
@@ -62,7 +62,7 @@
       <li class="topping">Fresh berries</li>
   </ul>
 
-
+<!---I changed something here but forgot oops. Probably better html formatting.-->
   </section>
   
 </body>
