commited changes to css

--- a/breakfast/waffles.html
+++ b/breakfast/waffles.html
@@ -22,10 +22,29 @@
     </span> 
     <span class="waffle-photos">703 Photos</span>
   </div>
-  <section class="waffle-description"> <!-----Waffles blurb-->
+<!----Prep time section-->
+<div class="waffle-prep-content">
+  <div>
+    <p class="waffle-prep-label">Prep Time: </p>
+    <p class="waffle-prep-value">10 mins</p>
+    <p class="waffle-prep-label">Cook Time: </p>
+    <p class="waffle-prep-value">15 mins</p>
+    <p class="waffle-prep-label">Total Time: </p>
+    <p class="waffle-prep-value">25 mins</p>
+    <p class="waffle-prep-label">Servings: </p>
+    <p class="waffle-prep-value">6</p>
+    <p class="waffle-prep-label">Yield: </p>
+    <p class="waffle-prep-value"> 6 waffles</p>
+  </div>
+</div>
+
+
+  <!-----Waffles blurb-->
+  <section class="waffle-description"> 
     <p>This waffles recipe is the only one you need ot make home made waffles with your waffle iron. Simple pantry ingredients mix up quickly in this easy batter than can be used right away or stored in the refrigerator for up to a week. Serves waffles hot with whipped cream and fresh fruit or with butter ans maple syrup for either breakfast, lunch, or a snack.</p>
   </section>
-  <section class="waffle-ingredients"> <!--Ingredients section-->
+  <!--Ingredients section-->
+  <section class="waffle-ingredients"> 
     <h3 class="waffle-ingredients-header"> Ingredient overview</h3>
     <p class="waffle-ingredients-blurb">You likely have all of the ingredients you'll need for this waffle recipe. If not, visit your local market. </p>
     <ul class="waffle-ingredients-list">
@@ -39,17 +58,36 @@
       <li>Nonstick cooking spray</li>
     </ul>
   </section>
-  <section class="directions-section"> <!----Directions area-->
-    <h2 class="direction-header">How to Make Waffles</h2>
-    <p class="directions-blurb">You'll find the full, step-by-step recipe below. But there is a brief overview of what you can expect when you make the best waffles of your life.</p>
-    <p class="waffle-directions">
-      <strong>Step 1: </strong> Preheat a waffle iron according to manufacturer's instructions.
-      <br>
-      <strong>Step 2: </strong> Whisk eggs in a large bowl until light and fluffy. Add flour, milk, and vegetable oil and mix to combine. Whisk in sugar, then mix in baking powder, salt, and vanilla just until smooth, being careful not to overmix.
-      <br>
-      <strong>Step 3: </strong> Spray the preheated waffle iron with nonstick spray. Pour batter onto the hot waffle iron and cook until golden brown and the iron stops steaming, 3 to 5 minutes.
-    </p>
+
+
+  <!----Waffle directions section-->
+  <section class="waffles-direction-section">
+    <h2 class="waffles-direction-header">How to make Waffles</h2>
+    <p class="waffles-directions-blurb">This waffle recipe is the only one you'll need to make homemade waffles with your waffle iron. Simple pantry ingredients mix up quickly in this easy batter that can be used right away or stored in the refrigerator for up to a week. Serve waffles hot with whipped cream and fresh fruit or with butter and maple syrup for either breakfast, brunch, or a snack.</p>
+    <div class="waffles-direction-content">
+      <div class="direction-step">
+        <p class="step-label">Step 1</p>
+        <p class="step-description">Preheat a waffle iron according to manufacturer's instructions.
+        </p>
+      </div>
+    </div>
+    <div class="waffles-direction-content">
+      <div class="direction-step">
+        <p class="step-label">Step 2</p>
+        <p class="step-description">Whisk eggs in a large bowl until light and fluffy. Add flour, milk, and vegetable oil and mix to combine. Whisk in sugar, then mix in baking powder, salt, and vanilla just until smooth, being careful not to over mix.
+        </p>
+      </div>
+    </div>
+    <div class="waffles-direction-content">
+      <div class="direction-step">
+        <p class="step-label">Step 3</p>
+        <p class="step-description">Spray the preheated waffle iron with nonstick spray. Pour batter onto the hot waffle iron and cook until golden brown and the iron stops steaming, 3 to 5 minutes.
+        </p>
+      </div>
+    </div>
   </section>
+
+<!-----Waffles topping section-->
   <section class="topping-section"> <!---Topping ideas.-->
     <h2 class="topings-header">Waffles topping</h2>
     <p class="topings-blurb">For the most traditional experience, top each waffle with butter and maple syrup. But thats not the only way to enjoy this recipe! Try one of the following for a waffle experience.</p>
