--- a/breakfast/quiche.html
+++ b/breakfast/quiche.html
@@ -11,7 +11,19 @@
     <h1>Amazing Quiche Lorraine Recipe</h1>
   </header>
   <section class="intro-section">
-    <p class="intro">This quiche is a for sure way to make anyone who eats it, morning!</p>
+    <p class="intro">Quiche Lorraine is a French classic. Bacon, Swiss cheese, and onions mingle in perfect harmony amidst eggs and cream. Perfect for breakfast, brunch, lunch, dinner, or just an indulgent snack!</p>
+  </section>
+  <img src="../images/quiche1.jpg" alt="photo of a quiche">
+  <section class="quiche-reviews">
+    <span class="review-star1">⭐</span>
+    <span class="review-star2">⭐</span>
+    <span class="review-star3">⭐</span>
+    <span class="review-star4">⭐</span>
+    <span class="quiche-review">4.7
+      (265)</span> 
+    <span class="quiche-count">4,103 Reviews
+    </span> 
+    <span class="quiche-photos">703 Photos</span>
   </section>
   <div class="quiche-prep-content">
     <div>
@@ -29,17 +41,7 @@
       <p class="prep-time-value">1 9-inch Quiche</p>
     </div>
   </div> <!----Need to wrap code in better format for CSS-->
-  <section class="quiche-reviews">
-    <span class="review-star1">⭐</span>
-    <span class="review-star2">⭐</span>
-    <span class="review-star3">⭐</span>
-    <span class="review-star4">⭐</span>
-    <span class="quiche-review">4.7
-      (265)</span> 
-    <span class="quiche-count">4,103 Reviews
-    </span> 
-    <span class="quiche-photos">703 Photos</span>
-  </section>
+
   <section class="quiche-ingredients">
     <h3 class="quichie-items">Ingredients</h3>
     <ul>
@@ -65,12 +67,12 @@
     <p class="direction-label">Step 4</p>
     <p class="direction-content">While the crust is baking, cook bacon in a large skillet over medium-high heat until crisp, about 10 minutes. Transfer to a paper towel-lined plate and crumble when cool enough to handle. Drain all but 2 tablespoons drippings from the skillet.
     </p>
-    <p class="direction-content">Step 5</p>
-    <p class="direction-label">Add onion to drippings in the skillet; cook and stir over medium heat until tender, about 5 minutes. Use a slotted spoon and transfer to a bowl.</p>
-    <p class="direction-content">Step 6</p>
-    <p class="direction-label">Toss Swiss cheese and flour together in a small bowl. Whisk milk, eggs, and salt together in a large bowl, then stir in bacon and onion. Mix in cheese mixture until well combined, then pour into pie crust.</p>
-    <p class="direction-content">Step 7</p>
-    <p class="direction-label">Bake in the preheated oven until a knife inserted into the center comes out clean, 35 to 40 minutes. If necessary, cover the edge of crust with foil while baking to prevent burning or over-browning. Let stand for 10 minutes before serving.</p>
+    <p class="direction-label">Step 5</p>
+    <p class="direction-content">Add onion to drippings in the skillet; cook and stir over medium heat until tender, about 5 minutes. Use a slotted spoon and transfer to a bowl.</p>
+    <p class="direction-label">Step 6</p>
+    <p class="direction-content">Toss Swiss cheese and flour together in a small bowl. Whisk milk, eggs, and salt together in a large bowl, then stir in bacon and onion. Mix in cheese mixture until well combined, then pour into pie crust.</p>
+    <p class="direction-label">Step 7</p>
+    <p class="direction-content">Bake in the preheated oven until a knife inserted into the center comes out clean, 35 to 40 minutes. If necessary, cover the edge of crust with foil while baking to prevent burning or over-browning. Let stand for 10 minutes before serving.</p>
   </section>
 </body>
 </html>
