--- a/index.html
+++ b/index.html
@@ -7,22 +7,27 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>RecipeCentral</h1>
-  <p>Welcome to Recipe central, where you can find the coolest and most cost effective recipes to date.</p>
-  <section breakfast-section>
-    <a href="breakfast/waffles.html">Waffles Recipe</a>
-    <a href="breakfast/quiche.html">Quiche Recipe</a>
-    <a href="breakfast/scrambledeggs.html">Scrambled Eggs</a>
-  </section>
-  <section class="lunch-section">
-    <a href="lunch/chicken-sandwich.html">Copycat McChicken Sandwich</a>
-    <a href="lunch/spaghetti.html">Spaghetti</a>
-    <a href="lunch/tacos.html">Tacos</a>
+  <header>
+    <h1>Recipe Central</h1>
+    <p>Welcome to Recipe central, where you can find the coolest and most cost effective recipes to date.</p>
+  </header>
+  <div class="website-section">
+    <section breakfast-section>
+      <a href="breakfast/waffles.html" class="waffles">Waffles</a>
+      <a href="breakfast/quiche.html" class="quiche">Quiche Loraine</a>
+      <a href="breakfast/scrambledeggs.html" class="eggs">Scrambled Eggs</a>
+    </section>
+      <section class="lunch-section">
+    <a href="lunch/chicken-sandwich.html" class="mcchicken">Copycat McChicken Sandwich</a>
+    <a href="lunch/spaghetti.html" id="spaghetti">Spaghetti</a>
+    <a href="lunch/tacos.html" id="tacos">Tacos</a>
   </section>
   <section class="dinner-section">
-    <a href="dinner/alfredo.html">Shrimp Linguine Dinner</a>
-    <a href="dinner/carbonara.html">Carbonara Dinner</a>
-    <a href="dinner/steak.html">Steak Dinner</a>
+    <a href="dinner/alfredo.html" id="alfredo">Shrimp Linguine Dinner</a>
+    <a href="dinner/carbonara.html" id="carbonara">Carbonara Dinner</a>
+    <a href="dinner/steak.html" id="steak">Steak Dinner</a>
   </section>
+  </div>
+
 </body>
 </html>
