fixed css and flexbox formatting

--- a/breakfast/quiche.html
+++ b/breakfast/quiche.html
@@ -7,25 +7,30 @@
   <link rel="stylesheet" href="breakfast.css">
 </head>
 <body>
-  <header class="main-header">
-    <h1>Amazing Quiche Lorraine Recipe</h1>
+  <header class="top-header">
+    <h1 class="quiche-header">Quiche Lorraine</h1>
+    <nav class="quiche-nav">
+      <a href="#">Home</a>
+      <a href="#">Lunch</a>
+      <a href="#">Dinner</a>
+    </nav>
   </header>
-  <section class="intro-section">
-    <p class="intro">Quiche Lorraine is a French classic. Bacon, Swiss cheese, and onions mingle in perfect harmony amidst eggs and cream. Perfect for breakfast, brunch, lunch, dinner, or just an indulgent snack!</p>
+  <section class="quiche-hero">
+    <img src="../images/quiche1.jpg" alt="photo of a quiche" class="quiche-image">
+    <p class="hero-intro">Quiche Lorraine is a French classic. Bacon, Swiss cheese, and onions mingle in perfect harmony amidst eggs and cream. Perfect for breakfast, brunch, lunch, dinner, or just an indulgent snack</p>
   </section>
-  <img src="../images/quiche1.jpg" alt="photo of a quiche">
-  <section class="quiche-reviews">
-    <span class="review-star1">⭐</span>
-    <span class="review-star2">⭐</span>
-    <span class="review-star3">⭐</span>
-    <span class="review-star4">⭐</span>
-    <span class="quiche-review">4.7
-      (265)</span> 
-    <span class="quiche-count">4,103 Reviews
-    </span> 
-    <span class="quiche-photos">703 Photos</span>
+  <section class="reviews-section">
+      <span class="review-star1">⭐</span>
+      <span class="review-star2">⭐</span>
+      <span class="review-star3">⭐</span>
+      <span class="review-star4">⭐</span>
+      <span class="quiche-review">4.7
+        (265)</span> 
+      <span class="quiche-count">4,103 Reviews
+      </span> 
+      <span class="quiche-photos">703 Photos</span>
   </section>
-  <div class="quiche-prep-content">
+  <section class="quiche-prep-content">
     <div>
       <p class="prep-time-label">Prep Time: </p>
       <p class="prep-time-value">20 mins</p>
@@ -40,8 +45,8 @@
       <p class="prep-time-label">Yield: </p>
       <p class="prep-time-value">1 9-inch Quiche</p>
     </div>
-  </div> <!----Need to wrap code in better format for CSS-->
 
+  </section>
   <section class="quiche-ingredients">
     <h3 class="quichie-items">Ingredients</h3>
     <ul>
@@ -74,5 +79,6 @@
     <p class="direction-label">Step 7</p>
     <p class="direction-content">Bake in the preheated oven until a knife inserted into the center comes out clean, 35 to 40 minutes. If necessary, cover the edge of crust with foil while baking to prevent burning or over-browning. Let stand for 10 minutes before serving.</p>
   </section>
+
 </body>
 </html>
