breakfast link to home
breakfast link to home

--- a/breakfast/quiche.html
+++ b/breakfast/quiche.html
@@ -10,7 +10,7 @@
   <header class="top-header">
     <h1 class="quiche-header">Quiche Lorraine</h1>
     <nav class="quiche-nav">
-      <a href="#">Home</a>
+      <a href="/index.html">Home</a>
       <a href="#">Lunch</a>
       <a href="#">Dinner</a>
     </nav>
