most recent changes to HTML, CSS.

--- a/breakfast/scrambledeggs.html
+++ b/breakfast/scrambledeggs.html
@@ -4,74 +4,15 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Scrambled Eggs</title>
-  <link rel="stylesheet" href="breakfast.css">
+
 </head>
 <body>
-  <section class="scrambled-eggs">
-    <h1>Best Scrambled Eggs</h1>
-  </section>
-
-  <!----Review section, using sections helps for better accessibility. Note this code is from chatgpt. self check. -->
-  <div class="reviews">
-    <span class="review-star">⭐</span>
-    <span class="review-rating">4.7 Rating</span> 
-    <span class="review-count">42 Reviews</span> 
-    <span class="review-photos">18 Photos</span>
-  </div> <!----This allows for the css to target them specifically with the span element-->
-
-
-  <!---Recipe Description ---->
-  <section class="egg-description"> 
-    This best scrambled egg recipe took a bit of tweaking, but I've finally made the best scrambled eggs ever! My friends and family love it. I make it almost once a week before school.
-  </section>
-  <img src= "https://www.allrecipes.com/thmb/dn23np3M6tkCe_LU9bIVqKSq5EA=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/256007-best-scrambled-eggs-ddmfs-3X4-0031-ff526aac78f24031a5f947a546918a39.jpg" alt="scrambled eggs">
-
-  <!---Prep time box.-->
-  <section class="prep-time-box">
-    <p>Prep time: 5 mins </p>
-    <p>Cook time: 5 mins</p>
-    <p>Total time: 10 mins</p>
-    <p>Servings: 1 serving</p>
-  </section>
-
-<!----Ingredients section-->
-  <section class="ingredients-section">
-    <h3 class="ingredients-header">Ingredients</h3>
-  <ul class="ingredients-list">
-  <li>2 large white eggs</li>
-  <li>2 thin slices cooked ham, diced (Optional)</li>
-  <li>2 tablespoons sliced Cheddar cheese</li>
-  <li>1 teaspoon heavy whipping cream</li>
-  <li>½ teaspoon butter</li>
-</ul>
-  </section>
-
-<!---Directions Section-->
-<section class="directions-section">
-  <h3 class="directions-header">Directions</h3>
-  <ul class="directions-list">
-    <li class="directions-step">
-      <figure>
-        <img src="https://www.allrecipes.com/thmb/qa4bdJBE_IY6tBYvb5pDgVxUW3Y=/1500x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/256007-best-scrambled-eggs-ddmfs-Step1-0016-608840ddc2ed42a6a1aca5fef0824295.jpg" alt="ingredients in bowls" class="raw-ingredients">
-        <figcaption>Step 1: Gather all the ingredients</figcaption>
-      </figure>
-    </li>
-    <li class="directions-step">
-      <figure>
-        <img src="https://www.allrecipes.com/thmb/D4NCLmNjTwn-YMPTpwVHToPDc14=/1500x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/256007-best-scrambled-eggs-ddmfs-Step2-0019-99afca1da00f43d08ce631972bff1813.jpg" alt=" ingredients mixed together preparing to mix." class="mixed-eggs">
-        <figcaption>Step 2: Whisk eggs in a small bowl until smooth. Mix in ham, Cheddar cheese, and heavy cream.</figcaption>
-      </figure>
-    </li>
-    <li class="directions-step">
-      <figure>
-        <img src="https://www.allrecipes.com/thmb/Pi5z0uWzX8ax_-kksePpk7-ZCiI=/1500x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/256007-best-scrambled-eggs-ddmfs-Step2-0023-63c8988dce2146398333d711503d6a2b.jpg" alt="eggs mixed with all ingredients." class="cooked-eggs">
-        <figcaption>Step 3: Melt butter in a skillet over medium heat. Pour in egg mixture; cook and stir until set but still moist, 3 to 5 minutes.</figcaption>
-      </figure>
-    </li>
-  </ul>
-</section>
-
-
-
+  <header class="egg-main">
+    <h1 class="egg-main-header">Scrambled Eggs</h1>
+    <nav class="egg-nav">
+      <a href="/lunch/lunch.html">Lunch</a>
+      <a href="/dinner/dinner.html">Dinner</a>
+    </nav>
+  </header>
 </body>
 </html>
