--- a/index.html
+++ b/index.html
@@ -7,20 +7,28 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header>
+  <section>
+    <section class="main-header">
     <h1>Recipe Central</h1>
+    <nav class="main-nav">
+      <a href="#" class="link">About</a>
+      <a href="#" class="link">Contact</a>
+    </nav>
+  </section>
+  <section class="hero">
     <p>Welcome to Recipe central, where you can find the coolest and most cost effective recipes to date.</p>
-  </header>
+  </section>
+  </section>
   <div class="website-section">
     <section breakfast-section>
-      <a href="breakfast/waffles.html" class="waffles">Waffles</a>
-      <a href="breakfast/quiche.html" class="quiche">Quiche Loraine</a>
-      <a href="breakfast/scrambledeggs.html" class="eggs">Scrambled Eggs</a>
+      <a href="waffles.html" class="waffles">Waffles</a>
+      <a href="quiche.html" class="quiche">Quiche Loraine</a>
+      <a href="/breakfast/scrambledeggs.html" class="eggs">Scrambled Eggs</a>
     </section>
       <section class="lunch-section">
-    <a href="lunch/chicken-sandwich.html" class="mcchicken">Copycat McChicken Sandwich</a>
-    <a href="lunch/spaghetti.html" id="spaghetti">Spaghetti</a>
-    <a href="lunch/tacos.html" id="tacos">Tacos</a>
+    <a href="chicken-sandwich.html" class="mcchicken">Copycat McChicken Sandwich</a>
+    <a href="spaghetti.html" id="spaghetti">Spaghetti</a>
+    <a href="tacos.html" id="tacos">Tacos</a>
   </section>
   <section class="dinner-section">
     <a href="dinner/alfredo.html" id="alfredo">Shrimp Linguine Dinner</a>
