--- a/breakfast/scrambledeggs.html
+++ b/breakfast/scrambledeggs.html
@@ -4,15 +4,84 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Scrambled Eggs</title>
-
+  <link rel="stylesheet" href="breakfast.css">
 </head>
 <body>
-  <header class="egg-main">
-    <h1 class="egg-main-header">Scrambled Eggs</h1>
+  <header class="egg-main-header">
+    <h1 class="egg-main">Scrambled Eggs</h1>
     <nav class="egg-nav">
       <a href="/lunch/lunch.html">Lunch</a>
       <a href="/dinner/dinner.html">Dinner</a>
     </nav>
   </header>
+  <head class="egg-header">
+    <img src="../images/scrambledeggs.jpg" alt="photo of scrambled eggs" class="egg-image">
+  </head>
+  <section class="egg-hero">
+    <h3>Best Egg Scramble</h3>
+    <p>
+      This best scrambled egg recipe took a bit of tweaking, but I've finally made the best scrambled eggs ever! My friends and family love it. I make it almost once a week before school.
+    </p>
+  </section>
+  <section class="scramble-review-section">
+    <span class="egg-star1">⭐</span>
+    <span class="egg-star2">⭐</span>
+    <span class="egg-star3">⭐</span>
+    <span class="egg-star4">⭐</span>
+    <span class="egg-review">4.7
+      (265)</span> 
+    <span class="egg-count">4,103 Reviews
+    </span> 
+    <span class="egg-photos">703 Photos</span>
+</section>
+<section class="egg-prep-content">
+  <div>
+    <p class="egg-prep-time-label">Prep Time: </p>
+    <p class="egg-prep-time-value">20 mins</p>
+    <p class="egg-prep-time-label">Cook Time: </p>
+    <p class="egg-prep-time-value">50 mins</p>
+    <p class="egg-prep-time-label">Additional Time: </p>
+    <p class="egg-prep-time-value">10 mins</p>
+    <p class="egg-prep-time-label">Total Time: </p>
+    <p class="egg-prep-time-value">1hr and 20 mins</p>
+    <p class="egg-prep-time-label">Servings: </p>
+    <p class="egg-prep-time-value">8</p>
+    <p class="egg-prep-time-label">Yield: </p>
+    <p class="egg-prep-time-value">1 9-inch Quiche</p>
+  </div>
+
+</section>
+<section class="egg-ingredients">
+  <h3 class="quichie-items">Ingredients</h3>
+  <ul>
+    <li class="quiche-item">1 (9 inch) refrigerated pie pastry</li>
+    <li class="quiche-item">6 slices of bacon</li>
+    <li class="quiche-item">1 medium onion, sliced</li>
+    <li class="quiche-item">1 1/2 cups shredded swiss cheese</li>
+    <li class="quiche-item">1 tablespoon all purpose flour</li>
+    <li class="quiche-item">1 1/2 cups milk</li>
+    <li class="quiche-item">3 large eggs, beaten</li>
+    <li class="quiche-item">1/4 teaspoon salt</li>
+  </ul>
+</section>
+<section class="quiche-directions-sections">
+  <h3 class="directions-header">Directions</h3>
+  <p class="direction-label">Step 1</p>
+  <p class="direction-content">Preheat the oven to 450 degrees F (230 degrees C).</p>
+  <p class="direction-label">Step 2</p>
+  <p class="direction-content">Place pie pastry into a 9-inch pie pan; line with a double layer of aluminum foil and a layer of pie weights or dried beans.
+  </p>
+  <p class="direction-label">Step 3</p>
+  <p class="direction-content">Bake in the preheated oven until golden on the edges, about 8 minutes. Carefully remove the foil and weights; continue baking until crust is set and dry, about 5 minutes more. Remove from the oven and reduce the temperature to 325 degrees F (165 degrees C).</p>
+  <p class="direction-label">Step 4</p>
+  <p class="direction-content">While the crust is baking, cook bacon in a large skillet over medium-high heat until crisp, about 10 minutes. Transfer to a paper towel-lined plate and crumble when cool enough to handle. Drain all but 2 tablespoons drippings from the skillet.
+  </p>
+  <p class="direction-label">Step 5</p>
+  <p class="direction-content">Add onion to drippings in the skillet; cook and stir over medium heat until tender, about 5 minutes. Use a slotted spoon and transfer to a bowl.</p>
+  <p class="direction-label">Step 6</p>
+  <p class="direction-content">Toss Swiss cheese and flour together in a small bowl. Whisk milk, eggs, and salt together in a large bowl, then stir in bacon and onion. Mix in cheese mixture until well combined, then pour into pie crust.</p>
+  <p class="direction-label">Step 7</p>
+  <p class="direction-content">Bake in the preheated oven until a knife inserted into the center comes out clean, 35 to 40 minutes. If necessary, cover the edge of crust with foil while baking to prevent burning or over-browning. Let stand for 10 minutes before serving.</p>
+</section>
 </body>
 </html>
