most recent changes

--- a/breakfast/scrambledeggs.html
+++ b/breakfast/scrambledeggs.html
@@ -10,16 +10,18 @@
   <header class="egg-main-header">
     <h1 class="egg-main">Scrambled Eggs</h1>
     <nav class="egg-nav">
+      <a href="/index.html">Home</a>
+      <a href="/breakfast/breakfast.html">Breakfast</a>
       <a href="/lunch/lunch.html">Lunch</a>
       <a href="/dinner/dinner.html">Dinner</a>
     </nav>
   </header>
-  <head class="egg-header">
+  <div class="egg-image-container">
     <img src="../images/scrambledeggs.jpg" alt="photo of scrambled eggs" class="egg-image">
-  </head>
+  </div>
   <section class="egg-hero">
-    <h3>Best Egg Scramble</h3>
-    <p>
+    <h3 class="egg-hero-header">Best Egg Scramble</h3>
+    <p class="egg-text">
       This best scrambled egg recipe took a bit of tweaking, but I've finally made the best scrambled eggs ever! My friends and family love it. I make it almost once a week before school.
     </p>
   </section>
@@ -35,7 +37,7 @@
     <span class="egg-photos">703 Photos</span>
 </section>
 <section class="egg-prep-content">
-  <div>
+  <div class="egg-prep-container">
     <p class="egg-prep-time-label">Prep Time: </p>
     <p class="egg-prep-time-value">20 mins</p>
     <p class="egg-prep-time-label">Cook Time: </p>
@@ -51,37 +53,28 @@
   </div>
 
 </section>
-<section class="egg-ingredients">
-  <h3 class="quichie-items">Ingredients</h3>
-  <ul>
-    <li class="quiche-item">1 (9 inch) refrigerated pie pastry</li>
-    <li class="quiche-item">6 slices of bacon</li>
-    <li class="quiche-item">1 medium onion, sliced</li>
-    <li class="quiche-item">1 1/2 cups shredded swiss cheese</li>
-    <li class="quiche-item">1 tablespoon all purpose flour</li>
-    <li class="quiche-item">1 1/2 cups milk</li>
-    <li class="quiche-item">3 large eggs, beaten</li>
-    <li class="quiche-item">1/4 teaspoon salt</li>
+<h3 class="egg-header-ingredients">Ingredients</h3>
+  <div class="egg-ingredient-container">
+  <ul class="egg-ingredient-list">
+    <li>2 large eggs</li>
+    <li>2 thin slices cooked ham, diced (Optional)</li>
+    <li>2 tablespoons sliced Cheddar cheese</li>
+    <li>1 teaspoon heavy whipping cream</li>
+    <li >½ teaspoon butter</li>
   </ul>
-</section>
-<section class="quiche-directions-sections">
-  <h3 class="directions-header">Directions</h3>
-  <p class="direction-label">Step 1</p>
-  <p class="direction-content">Preheat the oven to 450 degrees F (230 degrees C).</p>
-  <p class="direction-label">Step 2</p>
-  <p class="direction-content">Place pie pastry into a 9-inch pie pan; line with a double layer of aluminum foil and a layer of pie weights or dried beans.
+  </div>
+  <h3 class="egg-directions-header">Directions</h3>
+<div class="egg-directions-container">
+  <p>Step 1</p>
+  <p>Gather all ingredients.</p>
+  <img src="/images/ingredient1.png" alt="raw ingredients">
+  <p>Step 2</p>
+  <p>Place pie pastry into a 9-inch pie pan; line with a double layer of aluminum foil and a layer of pie weights or dried beans.
   </p>
-  <p class="direction-label">Step 3</p>
-  <p class="direction-content">Bake in the preheated oven until golden on the edges, about 8 minutes. Carefully remove the foil and weights; continue baking until crust is set and dry, about 5 minutes more. Remove from the oven and reduce the temperature to 325 degrees F (165 degrees C).</p>
-  <p class="direction-label">Step 4</p>
-  <p class="direction-content">While the crust is baking, cook bacon in a large skillet over medium-high heat until crisp, about 10 minutes. Transfer to a paper towel-lined plate and crumble when cool enough to handle. Drain all but 2 tablespoons drippings from the skillet.
-  </p>
-  <p class="direction-label">Step 5</p>
-  <p class="direction-content">Add onion to drippings in the skillet; cook and stir over medium heat until tender, about 5 minutes. Use a slotted spoon and transfer to a bowl.</p>
-  <p class="direction-label">Step 6</p>
-  <p class="direction-content">Toss Swiss cheese and flour together in a small bowl. Whisk milk, eggs, and salt together in a large bowl, then stir in bacon and onion. Mix in cheese mixture until well combined, then pour into pie crust.</p>
-  <p class="direction-label">Step 7</p>
-  <p class="direction-content">Bake in the preheated oven until a knife inserted into the center comes out clean, 35 to 40 minutes. If necessary, cover the edge of crust with foil while baking to prevent burning or over-browning. Let stand for 10 minutes before serving.</p>
-</section>
+  <img src="/images/ingredient2.png" alt="raw ingredients mixed">
+  <p>Step 3</p>
+  <p>Melt butter in a skillet over medium heat. Pour in egg mixture; cook and stir until set but still moist, 3 to 5 minutes..</p>
+  <img src="/images/ingredient3.png" alt="cooked ingreidents">
+</div>
 </body>
 </html>
