--- a/index.html
+++ b/index.html
@@ -20,16 +20,19 @@
   </section>
   </section>
   <div class="website-section">
+    <h3>Breakfast</h3>
     <section breakfast-section>
       <a href="waffles.html" class="waffles">Waffles</a>
       <a href="quiche.html" class="quiche">Quiche Loraine</a>
       <a href="/breakfast/scrambledeggs.html" class="eggs">Scrambled Eggs</a>
     </section>
+    <h3>Lunch</h3>
       <section class="lunch-section">
     <a href="chicken-sandwich.html" class="mcchicken">Copycat McChicken Sandwich</a>
     <a href="spaghetti.html" id="spaghetti">Spaghetti</a>
     <a href="tacos.html" id="tacos">Tacos</a>
   </section>
+  <h3>Dinner</h3>
   <section class="dinner-section">
     <a href="dinner/alfredo.html" id="alfredo">Shrimp Linguine Dinner</a>
     <a href="dinner/carbonara.html" id="carbonara">Carbonara Dinner</a>
