--- a/breakfast/waffles.html
+++ b/breakfast/waffles.html
@@ -7,101 +7,101 @@
   <title>Waffles Recipe</title>
 </head>
 <body>
-  <img src="../images/waffles.jpg" alt="Picture of a plate fluffy waffles" class="waffles-picture">
-  <section class="section-header"> <!----This is where the section header for the waffles-->
-    <h2>Waffles</h2>
+  <header class="waffle-header">
+    <h1 class="waffle-title">Waffles Recipe</h1>
+    <nav class="waffle-nav">
+      <a href="/breakfast/breakfast.html">Breakfast</a>
+      <a href="/lunch/lunch.html">Lunch</a>
+      <a href="/dinner/dinner.html">Dinner</a>
+    </nav>
+  </header>
+  <section class="waffles-image-container">
+    <img src="../images/waffles.jpg" alt="Picture of a plate fluffy waffles" class="waffles-image">
   </section>
-  <div class="review-section ">
-    <span class="review-star1">⭐</span>
-    <span class="review-star2">⭐</span>
-    <span class="review-star3">⭐</span>
-    <span class="review-star4">⭐</span>
-    <span class="waffle-rating">4.5
-    (5,367)</span> 
-    <span class="waffle-count">4,103 Reviews
-    </span> 
-    <span class="waffle-photos">703 Photos</span>
+  <section class="waffle-hero-container">
+    <h3 class="waffle-hero-item">Best Waffle Recipe</h3>
+    <p id="waffle-hero-blurb">This waffles recipe is the only one you need to make home made waffles with your waffle iron. Simple pantry ingredients mix up quickly in this easy batter than can be used right away or stored in the refrigerator for up to a week. Serves waffles hot with whipped cream and fresh fruit or with butter ans maple syrup for either breakfast, lunch, or a snack.</p>
+    <section class="waffle-review-container">
+      <div class="waffle-review-section">
+        <span class="waffle-star1">⭐</span>
+        <span class="waffle-star2">⭐</span>
+        <span class="waffle-star3">⭐</span>
+        <span class="waffle-star4">⭐</span>
+        <span class="waffle-star5">4.5
+        (5,367) | </span> 
+        <span class="waffle-count">4,103 Reviews |
+        </span> 
+        <span class="waffle-photos">703 Photos</span>
+      </div>
+    </section>
+  </section>
+
+<section class="waffle-prep-container">
+  <div class="waffle-prep-content">
+    <p class="waffle-label-item">Prep Time: </p>
+    <p class="waffle-prep-item">10 mins</p>
+    <p class="waffle-label-item">Cook Time: </p>
+    <p class="waffle-prep-item">15 mins</p>
+    <p class="waffle-label-item">Total Time: </p>
+    <p class="waffle-prep-item">25 mins</p>
+    <p class="waffle-label-item">Servings:</p>
+    <p class="waffle-prep-item">6</p>
+    <p class="waffle-label-item">Yield:</p>
+    <p class="waffle-prep-item"> 6 waffles</p>
   </div>
-<!----Prep time section-->
-<div class="waffle-prep-content">
-  <div>
-    <p class="waffle-prep-label">Prep Time: </p>
-    <p class="waffle-prep-value">10 mins</p>
-    <p class="waffle-prep-label">Cook Time: </p>
-    <p class="waffle-prep-value">15 mins</p>
-    <p class="waffle-prep-label">Total Time: </p>
-    <p class="waffle-prep-value">25 mins</p>
-    <p class="waffle-prep-label">Servings: </p>
-    <p class="waffle-prep-value">6</p>
-    <p class="waffle-prep-label">Yield: </p>
-    <p class="waffle-prep-value"> 6 waffles</p>
-  </div>
+
+</section>
+<div class="waffle-ingredients-header">
+  <h3>Ingredients</h3>
 </div>
-
-
-  <!-----Waffles blurb-->
-  <section class="waffle-description"> 
-    <p>This waffles recipe is the only one you need ot make home made waffles with your waffle iron. Simple pantry ingredients mix up quickly in this easy batter than can be used right away or stored in the refrigerator for up to a week. Serves waffles hot with whipped cream and fresh fruit or with butter ans maple syrup for either breakfast, lunch, or a snack.</p>
-  </section>
-  <!--Ingredients section-->
-  <section class="waffle-ingredients"> 
-    <h3 class="waffle-ingredients-header"> Ingredient overview</h3>
-    <p class="waffle-ingredients-blurb">You likely have all of the ingredients you'll need for this waffle recipe. If not, visit your local market. </p>
-    <ul class="waffle-ingredients-list">
-      <li>2 Large eggs</li>
-      <li>2 cups of flour</li>
-      <li>1 3/4 cups of milk</li>
-      <li>1 table spoon white sugar</li>
-      <li>4 tablespoons baking powder</li>
-      <li>1/4 tablespoon salt</li>
-      <li>1/2 tablespoon sugar</li>
-      <li>Nonstick cooking spray</li>
+<section class="waffle-ingredients-container">
+  <p class="waffle-ingredients-blurb">You likely have all of the ingredients you'll need for this waffle recipe. If not, visit your local market. </p>
+    <ul class="waffle-ingredient-list">
+      <li class="waffle-ingredient-item">2 Large eggs</li>
+      <li class="waffle-ingredient-item" >2 cups of flour</li>
+      <li class="waffle-ingredient-item" >1 3/4 cups of milk</li>
+      <li class="waffle-ingredient-item" >1 table spoon white sugar</li>
+      <li class="waffle-ingredient-item" >4 tablespoons baking powder</li>
+      <li class="waffle-ingredient-item">1/4 tablespoon salt</li>
+      <li class="waffle-ingredient-item" >1/2 tablespoon sugar</li>
+      <li class="waffle-ingredient-item">Nonstick cooking spray</li>
     </ul>
-  </section>
-
-
-  <!----Waffle directions section-->
-  <section class="waffles-direction-section">
-    <h2 class="waffles-direction-header">How to make Waffles</h2>
+</section>
+<div class="waffle-directions-header">
+  <h3>How to make Waffles</h3>
+</div>
+<section class="waffle-directions-container">
+  <div class="waffle-directions-content">
     <p class="waffles-directions-blurb">This waffle recipe is the only one you'll need to make homemade waffles with your waffle iron. Simple pantry ingredients mix up quickly in this easy batter that can be used right away or stored in the refrigerator for up to a week. Serve waffles hot with whipped cream and fresh fruit or with butter and maple syrup for either breakfast, brunch, or a snack.</p>
-    <div class="waffles-direction-content">
-      <div class="direction-step">
-        <p class="step-label">Step 1</p>
-        <p class="step-description">Preheat a waffle iron according to manufacturer's instructions.
-        </p>
-      </div>
-    </div>
-    <div class="waffles-direction-content">
-      <div class="direction-step">
-        <p class="step-label">Step 2</p>
-        <p class="step-description">Whisk eggs in a large bowl until light and fluffy. Add flour, milk, and vegetable oil and mix to combine. Whisk in sugar, then mix in baking powder, salt, and vanilla just until smooth, being careful not to over mix.
-        </p>
-      </div>
-    </div>
-    <div class="waffles-direction-content">
-      <div class="direction-step">
-        <p class="step-label">Step 3</p>
-        <p class="step-description">Spray the preheated waffle iron with nonstick spray. Pour batter onto the hot waffle iron and cook until golden brown and the iron stops steaming, 3 to 5 minutes.
-        </p>
-      </div>
-    </div>
-  </section>
+    <p class="step-label">Step 1</p>
+    <p class="step-description">Preheat a waffle iron according to manufacturer's instructions.</p>
+    <p class="step-label">Step 2</p>
+    <p class="step-description">Whisk eggs in a large bowl until light and fluffy. Add flour, milk, and vegetable oil and mix to combine. Whisk in sugar, then mix in baking powder, salt, and vanilla just until smooth, being careful not to over mix. </p>
+    <p class="step-label">Step 3</p>
+    <p class="step-description">Spray the preheated waffle iron with nonstick spray. Pour batter onto the hot waffle iron and cook until golden brown and the iron stops steaming, 3 to 5 minutes.</p>
+  </div>
+</section>
 
-<!-----Waffles topping section-->
-  <section class="topping-section"> <!---Topping ideas.-->
-    <h2 class="topings-header">Waffles topping</h2>
-    <p class="topings-blurb">For the most traditional experience, top each waffle with butter and maple syrup. But thats not the only way to enjoy this recipe! Try one of the following for a waffle experience.</p>
-    <ul class="topping-list">
-      <li class="topping"> Blueberry sauce</li>
-      <li class="topping">Nuts (such as pecans)</li>
-      <li class="topping">Vanilla glaze</li>
-      <li class="topping">Nutella</li>
-      <li class="topping">Home made whipped cream</li>
-      <li class="topping">Fresh berries</li>
-  </ul>
-
-<!---I changed something here but forgot oops. Probably better html formatting.-->
+  <div class="toppings-header">
+    <h3 >Waffles topping</h3>
+  </div>
+  <section class="topping-container">
+    <section class="topping-section"> 
+      <p class="toppings-blurb">For the most traditional experience, top each waffle with butter and maple syrup. But thats not the only way to enjoy this recipe! Try one of the following for a waffle experience.</p>
+      <ul class="topping-list">
+        <li class="topping"> Blueberry sauce</li>
+        <li class="topping">Nuts (such as pecans)</li>
+        <li class="topping">Vanilla glaze</li>
+        <li class="topping">Nutella</li>
+        <li class="topping">Home made whipped cream</li>
+        <li class="topping">Fresh berries</li>
+    </ul>
+  <!---I changed something here but forgot oops. Probably better html formatting.-->
+    </section>
   </section>
-  
+  <footer>
+    <p>FlexBox Practice 2024</p>
+  </footer>
+  <!---Fully finished Wafffles page!!-->
 </body>
 </html>
