--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
   <div class="website-section">
     <h3>Breakfast</h3>
     <section breakfast-section>
-      <a href="waffles.html" class="waffles">Waffles</a>
-      <a href="quiche.html" class="quiche">Quiche Loraine</a>
+      <a href="/breakfast/waffles.html" class="waffles">Waffles</a>
+      <a href="/breakfast/quiche.html" class="quiche">Quiche Loraine</a>
       <a href="/breakfast/scrambledeggs.html" class="eggs">Scrambled Eggs</a>
     </section>
     <h3>Lunch</h3>
