here are the changes after two weeks

--- a/lunch/chicken-sandwich.html
+++ b/lunch/chicken-sandwich.html
@@ -3,37 +3,99 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Copycat McChicken Recipe</title>
+  <title>Copy Cat McChicken</title>
+  <link rel="stylesheet" href="lunch.css">
 </head>
 <body>
-  <h1>Copycat Chicken Recipe</h1>
-  <p>Have you ever wanted the McChicken at home? Look no further! Here is a recipe just for you. Looking for the website for the recipe? <a href="https://www.allrecipes.com/copycat-mcchicken-sandwich-recipe-8702751">Click this link.</a> </p>
-
-  <h2>ingredients</h2>
-  <ul>
-  <li>1lb boneless skinless, cut into 1-pieces</li>
-  <li>3/4 lb boneless skinless chicken thighs, cut into 1-inch 1-pieces</li>
-  <li>1/2 teaspoon garlic Powder</li>
-  <li>1/4 teaspoon white pepper</li>
-  <li>1 teaspoon paprika, divided</li>
-  <li>2 teaspoon salt</li>
-  <li>1 cup flour</li>
-  <li>2/3 cup cornstarch</li>
-  <li>3/4 teaspoon pepper</li>
-  <li>6 hamburger buns, toasted</li>
-  <li>1 1/4 cups club soda</li>
-  <li>oil for frying</li>
-  <li>shredded ice burg lettuce</li>
-  <li>3 tablespoons mayo</li>
-  </ul>
-  <h3>Directions</h3>
-  <ul>
-  <li><strong>Step 1: </strong> Combine chicken, garlic powder, white pepper, 1/2 teaspoon paprika, and 1 teaspoon salt in a food processor. Pulse until finely chopped and it forms a uniform mixture.</li>
-  <li><strong>Step 2: </strong> Shape chicken mixture into 6 patties and freeze on a parchment or wax paper lined nack baking sheet for 20 to 30 mins.</li>
-  <li><strong>Step 3: </strong> Heat oil to 375 degrees F. Whisk together flour, cornstarch, remaining salt, remaining paprika and pepper in the bowl. Lightly coat partially frozen patties in flour mixture and shake off any excess mixture and set patties aside.</li>
-  <li><strong>Step 4:</strong> Add club soda to remaining flour mixture and mix to combine. </li>
-  <li><strong> Step 5:</strong> Working 2 to 3 at a time, dip the patties into the batter, allow excess to drip off and carefully place into the hot oil. Fry, while maintaining temperature of 330 to 350 degrees. until golden brown, crispy, and cooked 5 to 6 minutes per batch. Drain on a wire rack set aside a paper towel  lined rimmed baking sheet. Repeat with remaining patties. </li>
-  <li><strong>Step 6:</strong> Serve patties on buns with shredded lettuce and mayo</li> 
-</ul>
+  <!----Header----->
+  <header class="chicken-header"> 
+    <h1 class="chicken-title">Copy Cat McChicken Recipe</h1>
+    <nav  class="chicken-nav">
+      <a href="/breakfast/breakfast.html">Breakfast</a>
+      <a href="/lunch/lunch.html">Lunch</a>
+      <a href="/dinner/dinner.html">Dinner</a>
+    </nav>
+  </header>
+  <!---Image code-->
+  <section class="chicken-image-container">
+    <img src= "../images/chicken-image.jpg " alt="picture of chicken sandwich" class="chicken-image-content">
+  </section>
+  <!-----Hero section-->
+  <section class="chicken-hero-container">
+    <h3> Copycat Chicken Recipe</h3>
+    <p class="chicken-hero-blurb">This copycat McChicken sandwich is made with well seasoned chicken breast and chicken thighs. Freezing the patties before frying helps them keep their shape.
+    </p>
+    <!---Recipe recview-->
+    <section class="chicken-review-container">
+      <div class="chicken-review-section">
+        <span class="chicken-star1">⭐</span>
+        <span class="chicken-star2">⭐</span>
+        <span class="chicken-star3">⭐</span>
+        <span class="chicken-star4">⭐</span>
+        <span class="chicken-star5">4.5
+        (4) | </span> 
+        <span class="chicken-count">4 Reviews |
+        </span> 
+        <span class="chicken-photos">1  Photo</span>
+      </div>
+    </section>
+  </section>
+<!----Prep container-->
+  <section class="chicken-prep-container">
+    <div class="chicken-prep-content">
+      <p class="chicken-label-item">Prep Time: </p>
+      <p class="chicken-prep-item">20 mins</p>
+      <p class="chicken-label-item">Cook Time: </p>
+      <p class="chicken-prep-item">20 mins</p>
+      <p class="chicken-label-item">Freeze Time:</p>
+      <p class="chicken-prep-item">20 mins</p>
+      <p class="chicken-label-item">Total Time: </p>
+      <p class="chicken-prep-item">1 hr </p>
+      <p class="chicken-label-item">Servings:</p>
+      <p class="chicken-prep-item">6</p>
+      <p class="chicken-label-item">Yield:</p>
+      <p class="chicken-prep-item"> 6 chicken burgers</p>
+    </div>
+  </section>
+<!-----Ingredients------>
+<div class="waffle-ingredients-header">
+  <h3>Ingredients</h3>
+</div>
+<section class="waffle-ingredients-container">
+  <p class="waffle-ingredients-blurb">Here are the ingredients for the chicken sandwich. </p>
+    <ul class="chicken-ingredient-list">
+      <li class="chicken-ingredient-item">1 pound boneless skinless chicken breast, cut into 1-inch pieces</li>
+      <li class="chicken-ingredient-item" >3/4 pound boneless skinless chicken thighs, cut into 1-inch pieces</li>
+      <li class="chicken-ingredient-item" >1/2 teaspoon garlic powder</li>
+      <li class="chicken-ingredient-item" >1/4 teaspoon white pepper</li>
+      <li class="chicken-ingredient-item" > 1 teaspoon paprika, divided </li>
+      <li class="chicken-ingredient-item">2 teaspoons salt, divided</li>
+      <li class="chicken-ingredient-item" >1 cup flour</li>
+      <li class="chicken-ingredient-item"> 2/3 cup cornstarch </li>
+      <li class="chicken-ingredient-item"> 3/4 teaspoon pepper </li>
+      <li class="chicken-ingredient-item"> 6 hamburger buns, toasted</li>
+      <li class="chicken-ingredient-item"> 1 1/4 cups club soda</li>
+      <li class="chicken-ingredient-item"> oil for frying, or as needed </li>
+      <li class="chicken-ingredient-item"> shredded iceberg lettuce, to taste </li>
+      <li class="chicken-ingredient-item"> 3 tablespoons mayonnaise </li>
+    </ul>
+</section>
+<div class="chicken-directions-header">
+  <h3>How to make  CopyCat McChicken</h3>
+</div>
+<section class="chicken-directions-container">
+  <div class="chicken-directions-content">
+    <p class="chicken-directions-blurb">This waffle recipe is the only one you'll need to make homemade mchickens at home to save money. These make a great lunch or dinner or even after a night out meal. </p>
+    <p class="step-label">Step 1</p>
+    <p class="step-description">Preheat a waffle iron according to manufacturer's instructions.</p>
+    <p class="step-label">Step 2</p>
+    <p class="step-description">Whisk eggs in a large bowl until light and fluffy. Add flour, milk, and vegetable oil and mix to combine. Whisk in sugar, then mix in baking powder, salt, and vanilla just until smooth, being careful not to over mix. </p>
+    <p class="step-label">Step 3</p>
+    <p class="step-description">Spray the preheated waffle iron with nonstick spray. Pour batter onto the hot waffle iron and cook until golden brown and the iron stops steaming, 3 to 5 minutes.</p>
+  </div>
+</section>
+<footer>
+  <p>FlexBox Practice 2024</p>
+</footer>
 </body>
 </html>
