recent commits and changes to breakfast.css and quiche.html

--- a/breakfast/quiche.html
+++ b/breakfast/quiche.html
@@ -11,15 +11,20 @@
     <h1 class="quiche-header">Quiche Lorraine</h1>
     <nav class="quiche-nav">
       <a href="/index.html">Home</a>
-      <a href="#">Lunch</a>
-      <a href="#">Dinner</a>
+      <a href="/breakfast/breakfast.html">Breakfast</a>
+      <a href="/lunch/lunch.html">Lunch</a>
+      <a href="/dinner/dinner.html">Dinner</a>
     </nav>
   </header>
-  <section class="quiche-hero">
+  <section class="quiche-image-container">
     <img src="../images/quiche1.jpg" alt="photo of a quiche" class="quiche-image">
-    <p class="hero-intro">Quiche Lorraine is a French classic. Bacon, Swiss cheese, and onions mingle in perfect harmony amidst eggs and cream. Perfect for breakfast, brunch, lunch, dinner, or just an indulgent snack</p>
   </section>
-  <section class="reviews-section">
+  <section class="quiche-hero-container">
+    <div class="quiche-hero-section">
+      <h3 class="quiche-hero-header"> Best Quiche Lorraine</h3>
+      <p class="quiche-hero-text">Quiche Lorraine is a French classic. Bacon, Swiss cheese, and onions mingle in perfect harmony amidst eggs and cream. Perfect for breakfast, brunch, lunch, dinner, or just an indulgent snack</p>
+    </div>
+    <section class="quiche-review-section">
       <span class="review-star1">⭐</span>
       <span class="review-star2">⭐</span>
       <span class="review-star3">⭐</span>
@@ -30,8 +35,10 @@
       </span> 
       <span class="quiche-photos">703 Photos</span>
   </section>
-  <section class="quiche-prep-content">
-    <div>
+  </section>
+  
+  <section class="quiche-prep-container">
+    <div class="quiche-prep-content">
       <p class="prep-time-label">Prep Time: </p>
       <p class="prep-time-value">20 mins</p>
       <p class="prep-time-label">Cook Time: </p>
@@ -45,23 +52,27 @@
       <p class="prep-time-label">Yield: </p>
       <p class="prep-time-value">1 9-inch Quiche</p>
     </div>
-
   </section>
   <section class="quiche-ingredients">
-    <h3 class="quichie-items">Ingredients</h3>
-    <ul>
-      <li class="quiche-item">1 (9 inch) refrigerated pie pastry</li>
-      <li class="quiche-item">6 slices of bacon</li>
-      <li class="quiche-item">1 medium onion, sliced</li>
-      <li class="quiche-item">1 1/2 cups shredded swiss cheese</li>
-      <li class="quiche-item">1 tablespoon all purpose flour</li>
-      <li class="quiche-item">1 1/2 cups milk</li>
-      <li class="quiche-item">3 large eggs, beaten</li>
-      <li class="quiche-item">1/4 teaspoon salt</li>
-    </ul>
+    <h3 class="quichie-ingredients-header">Ingredients</h3>
   </section>
-  <section class="quiche-directions-sections">
-    <h3 class="directions-header">Directions</h3>
+<section class="quiche-ingredients-container">
+  <ul class="quiche-ingredient-list">
+    <li>1 (9 inch) refrigerated pie pastry</li>
+    <li>6 slices of bacon</li>
+    <li>1 medium onion, sliced</li>
+    <li>1 1/2 cups shredded swiss cheese</li>
+    <li>1 tablespoon all purpose flour</li>
+    <li>1 1/2 cups milk</li>
+    <li>3 large eggs, beaten</li>
+    <li>1/4 teaspoon salt</li>
+  </ul>
+</section>
+
+  <section class="quiche-direction-section">
+    <h3 class="quiche-direction-header">Directions</h3>
+  </section>
+  <section class="quich-direction-container">
     <p class="direction-label">Step 1</p>
     <p class="direction-content">Preheat the oven to 450 degrees F (230 degrees C).</p>
     <p class="direction-label">Step 2</p>
@@ -78,6 +89,8 @@
     <p class="direction-content">Toss Swiss cheese and flour together in a small bowl. Whisk milk, eggs, and salt together in a large bowl, then stir in bacon and onion. Mix in cheese mixture until well combined, then pour into pie crust.</p>
     <p class="direction-label">Step 7</p>
     <p class="direction-content">Bake in the preheated oven until a knife inserted into the center comes out clean, 35 to 40 minutes. If necessary, cover the edge of crust with foil while baking to prevent burning or over-browning. Let stand for 10 minutes before serving.</p>
+  </section>
+
   </section>
 
 </body>
