--- a/breakfast/scrambledeggs.html
+++ b/breakfast/scrambledeggs.html
@@ -24,20 +24,20 @@
     <p class="egg-text">
       This best scrambled egg recipe took a bit of tweaking, but I've finally made the best scrambled eggs ever! My friends and family love it. I make it almost once a week before school.
     </p>
+    <section class="scramble-review-section">
+      <span class="egg-star1">⭐</span>
+      <span class="egg-star2">⭐</span>
+      <span class="egg-star3">⭐</span>
+      <span class="egg-star4">⭐</span>
+      <span class="egg-review">4.7
+        (265)</span> 
+      <span class="egg-count">4,103 Reviews
+      </span> 
+      <span class="egg-photos">703 Photos</span>
   </section>
-  <section class="scramble-review-section">
-    <span class="egg-star1">⭐</span>
-    <span class="egg-star2">⭐</span>
-    <span class="egg-star3">⭐</span>
-    <span class="egg-star4">⭐</span>
-    <span class="egg-review">4.7
-      (265)</span> 
-    <span class="egg-count">4,103 Reviews
-    </span> 
-    <span class="egg-photos">703 Photos</span>
-</section>
-<section class="egg-prep-content">
-  <div class="egg-prep-container">
+  </section>
+<section class="egg-prep-container">
+  <div class="egg-prep-content">
     <p class="egg-prep-time-label">Prep Time: </p>
     <p class="egg-prep-time-value">20 mins</p>
     <p class="egg-prep-time-label">Cook Time: </p>
@@ -65,16 +65,16 @@
   </div>
   <h3 class="egg-directions-header">Directions</h3>
 <div class="egg-directions-container">
-  <p>Step 1</p>
+  <p class="egg-step-label">Step 1</p>
   <p>Gather all ingredients.</p>
-  <img src="/images/ingredient1.png" alt="raw ingredients">
-  <p>Step 2</p>
-  <p>Place pie pastry into a 9-inch pie pan; line with a double layer of aluminum foil and a layer of pie weights or dried beans.
+  <img src="/images/ingredient1.png" alt="raw ingredients" id="ingredient-photo">
+  <p  class="egg-step-label">Step 2</p>
+  <p class="egg-step-description">Whisk eggs in a small bowl until smooth. Mix in ham, Cheddar cheese, and heavy cream.
   </p>
-  <img src="/images/ingredient2.png" alt="raw ingredients mixed">
-  <p>Step 3</p>
-  <p>Melt butter in a skillet over medium heat. Pour in egg mixture; cook and stir until set but still moist, 3 to 5 minutes..</p>
-  <img src="/images/ingredient3.png" alt="cooked ingreidents">
+  <img src="/images/ingredient2.png" alt="raw ingredients mixed" id="ingredient-photo">
+  <p class="egg-step-label">Step 3</p>
+  <p class="egg-step-description">Melt butter in a skillet over medium heat. Pour in egg mixture; cook and stir until set but still moist, 3 to 5 minutes..</p>
+  <img src="/images/ingredient3.png" alt="cooked ingredients" id="ingredient-photo">
 </div>
 </body>
 </html>
