--- a/breakfast/waffles.html
+++ b/breakfast/waffles.html
@@ -101,6 +101,6 @@
   <footer>
     <p>FlexBox Practice 2024</p>
   </footer>
-  <!---Fully finished Wafffles page!!-->
+  <!---Fully finished Waffles page!!-->
 </body>
 </html>
