--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </section>
     <h3>Lunch</h3>
       <section class="lunch-section">
-    <a href="chicken-sandwich.html" class="mcchicken">Copycat McChicken Sandwich</a>
+    <a href="lunch/chicken-sandwich.html" class="mcchicken">Copycat McChicken Sandwich</a>
     <a href="spaghetti.html" id="spaghetti">Spaghetti</a>
     <a href="tacos.html" id="tacos">Tacos</a>
   </section>
