--- a/lunch/chicken-sandwich.html
+++ b/lunch/chicken-sandwich.html
@@ -25,7 +25,7 @@
     <h3> Copycat Chicken Recipe</h3>
     <p class="chicken-hero-blurb">This copycat McChicken sandwich is made with well seasoned chicken breast and chicken thighs. Freezing the patties before frying helps them keep their shape.
     </p>
-    <!---Recipe recview-->
+    <!---Recipe review-->
     <section class="chicken-review-container">
       <div class="chicken-review-section">
         <span class="chicken-star1">⭐</span>
@@ -58,10 +58,10 @@
     </div>
   </section>
 <!-----Ingredients------>
-<div class="waffle-ingredients-header">
+<div class="chicken-ingredients-header">
   <h3>Ingredients</h3>
 </div>
-<section class="waffle-ingredients-container">
+<section class= "chicken-ingredients-container">
   <p class="waffle-ingredients-blurb">Here are the ingredients for the chicken sandwich. </p>
     <ul class="chicken-ingredient-list">
       <li class="chicken-ingredient-item">1 pound boneless skinless chicken breast, cut into 1-inch pieces</li>
@@ -86,15 +86,15 @@
 <section class="chicken-directions-container">
   <div class="chicken-directions-content">
     <p class="chicken-directions-blurb">This waffle recipe is the only one you'll need to make homemade mchickens at home to save money. These make a great lunch or dinner or even after a night out meal. </p>
-    <p class="step-label">Step 1</p>
-    <p class="step-description">Preheat a waffle iron according to manufacturer's instructions.</p>
-    <p class="step-label">Step 2</p>
-    <p class="step-description">Whisk eggs in a large bowl until light and fluffy. Add flour, milk, and vegetable oil and mix to combine. Whisk in sugar, then mix in baking powder, salt, and vanilla just until smooth, being careful not to over mix. </p>
-    <p class="step-label">Step 3</p>
-    <p class="step-description">Spray the preheated waffle iron with nonstick spray. Pour batter onto the hot waffle iron and cook until golden brown and the iron stops steaming, 3 to 5 minutes.</p>
+    <p class="chicken-step-label">Step 1</p>
+    <p class="chicken-step-description">Preheat a waffle iron according to manufacturer's instructions.</p>
+    <p class="chicken-step-label">Step 2</p>
+    <p class="chicken-step-description">Whisk eggs in a large bowl until light and fluffy. Add flour, milk, and vegetable oil and mix to combine. Whisk in sugar, then mix in baking powder, salt, and vanilla just until smooth, being careful not to over mix. </p>
+    <p class="chicken-step-label">Step 3</p>
+    <p class="chicken-step-description">Spray the preheated waffle iron with nonstick spray. Pour batter onto the hot waffle iron and cook until golden brown and the iron stops steaming, 3 to 5 minutes.</p>
   </div>
 </section>
-<footer>
+<footer class="chicken-footer">
   <p>FlexBox Practice 2024</p>
 </footer>
 </body>
