--- a/lunch/lunch.html
+++ b/lunch/lunch.html
@@ -10,6 +10,7 @@
     <section class="lunch-header">
     <h1>Lunch</h1>
     <nav class="lunch-nav">
+      <a href="/index.html">Home</a>
       <a href="/breakfast/breakfast.html" class="link">Breakfast</a>
       <a href="/dinner/dinner.html" class="link">Dinner</a>
     </nav>
